# job-terminal

./: .gitignore  CLAUDE.md  job-terminal.code-workspace  pipeline  pyproject.toml  run.sh  spider
.claude/skills/flag-judge-errors/: SKILL.md
.claude/skills/flag-missing-keywords/: SKILL.md
.claude/skills/flag-title-judge-errors/: SKILL.md
apps/pipeline/: pyproject.toml
apps/pipeline/src/: cli.py  db.py  llm.py  models.py  paths.py
apps/pipeline/src/commands/: eval.py  jd.py  report.py  title.py
apps/pipeline/src/prompts/: judge_jd.md  judge_title.md  report_insight.md
apps/pipeline/src/steps/: __init__.py  _email.mjml  filter_title.py  insight.py  judge_jd.py  judge_title.py  report.py
apps/pipeline/tests/: conftest.py  test_cli_eval.py  test_filter_title.py  test_judge_jd.py  test_judge_title.py  test_render_eval.py  test_report_execute.py  test_report_insight.py  test_report_plan.py
apps/spider/: CLAUDE.md  pyproject.toml
apps/spider/src/: cli.py  jobspy_patch.py  main.py  models.py  paths.py  service.py
apps/spider/src/commands/: enrich.py  scrape.py  upload.py
apps/spider/src/services/: enrich.py  jobs.py  keywords.py  linkedin.py  scrape.py  snapshots.py  title_filter.py
apps/spider/tests/: test_scrape_execute.py  test_scrape_plan.py  test_upload_plan.py
docs/: plan-and-execute-pattern.md  tui-design.md
