[project]
name = "pipeline"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "job-terminal-models",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "markdown-it-py>=4.2.0",
    "mjml-python>=1.4.0",
    "resend>=2.30.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[tool.uv.sources]
job-terminal-models = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
