[project]
name = "spider"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "job-terminal-models",
    "job-terminal-tui",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-jobspy==1.1.82",
    "sqlmodel>=0.0.38",
    "typer>=0.25.1",
]

[tool.uv.sources]
job-terminal-models = { workspace = true }
job-terminal-tui = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
